# blue-chip

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  tasks.py
.github/: dependabot.yml
blue_chip/: __init__.py  __main__.py  constants.py  tasks.py
blue_chip/config/: __init__.py  data.py  lint.py
blue_chip/lint_config/: bc_audit.yaml
blue_chip/tasks/: __init__.py  formating.py  formatting.py  linting.py
scripts/: deploy.sh  test_deploy.sh
templates/: steps.yaml
tests/: test_basic.py
