[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "blue-chip"
version = "0.0.8"
description = "One click Python code quality package"
authors = ["Gabriel Gore <gabriel59kg@gmail.com>"]
license = "GPLv2"
readme = "README.md"
homepage = "https://pypi.org/project/blue-chip/"
repository = "https://github.com/Kilo59/blue-chip"
classifiers = [
    "Topic :: Utilities",
    "Topic :: Software Development :: Quality Assurance",
    "Development Status :: 3 - Alpha",]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "*"
isort = "^4"
prospector = {extras = ["with_pyroma"], version = "1.2.*"}
black = "20.8b1"

[tool.poetry.dev-dependencies]
pytest = "*"
coveralls = "*"
pytest-cov = "*"

[tool.poetry.scripts]
bc = "blue_chip.__main__:program.run"
bcp = "blue_chip.__main__:program.run"

[tool.isort]
known_third_party = "invoke,pkg_resources"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88
